GDO-880: Build and Release PingCentral 1.8
- Update run.sh to disable reflective access warning with spring boot 2.4.2.
- Update versions.json file to build 1.8.0 and stop building 1.6.0.
- Update gte-bits-repo.json to use 1.8.0 as latest.

Closes GDO-880